commit with all changes without 2 tests in bot