@@ -3,6 +3,6 @@ package edu.java.exception;
 public class ChatAlreadyRegisteredException extends RuntimeException {
 
     public ChatAlreadyRegisteredException(long chatId) {
-        super("Чат id = %d уже зарегистрирован".formatted(chatId));
+        super(String.format("Chat id = %d is already registered", chatId));
     }
 }
