@@ -5,6 +5,6 @@ import edu.java.dto.AddLinkRequest;
 public class LinkAlreadyTrackedException extends RuntimeException {
 
     public LinkAlreadyTrackedException(AddLinkRequest addLinkRequest) {
-        super("Ссылка %s уже отслеживается".formatted(addLinkRequest.link()));
+        super(String.format("The link %s is already being tracked", addLinkRequest.link()));
     }
 }
